# todo_project

./: .coveragerc  .dockerignore  .env  .env.test  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  1.py  Dockerfile  README.md  docker-compose.db.yml  docker-compose.full.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  log.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  run_checks.bat  settings.py  tasks.db  test_app.py
.github/workflows/: lint.yml  python-app.yml  python-test.yml  tests.yml
alembic/: env.py
alembic/versions/: 49f69b45a49b_add_refresh_token_table.py  f343fc20fa83_init.py
app/: __init__.py  api.py  auth.py  auth_service.py  db.py  dependencies.py  models.py  schemas.py  services.py  settings.py  tasks.py
app/routes/: admin.py  auth.py  tasks.py
app/utils/: jwt_token.py  security.py
db-init/: init-test.sql
tests/: conftest.py  test_admin_route.py  test_auth_login.py  test_auth_me.py  test_auth_register.py  test_dependencies_unit.py  test_models.py  test_tasks.py
utils/: __init__.py  db.py  logger.py  task_logger.py
