[tool.poetry]
name = "todo-project"
version = "0.1.0"
description = "Простой CLI todo менеджер"
authors = ["Maks <maks267361@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.13"
sqlalchemy = "*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
extend-select = ["E", "W", "F"]


